Corrigido swagger.
